cmake_minimum_required(VERSION 3.5)
project(P1_1 CXX)

# require a C++11 compiler for all targets
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(MATRIX_SOURCE
  Matrix.hpp Matrix.cpp)

set(HILL_SOURCE
  Hill.hpp Hill.cpp)
  
set(TEST_SOURCE
  student_tests.cpp)

set(SOURCE ${MATRIX_SOURCE} ${HILL_SOURCE})

# create unittests
add_executable(student-tests catch.hpp student_catch.cpp ${SOURCE} ${TEST_SOURCE})

# some simple tests
enable_testing()
add_test(student-tests student-tests)

add_custom_target(submission COMMAND
  ${CMAKE_COMMAND} -E tar "cfv" "${CMAKE_CURRENT_BINARY_DIR}/submission.zip" --format=zip
  Hill.hpp Hill.cpp student_tests.cpp
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
